--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -26,8 +26,8 @@
       <section class="filled">
         <form action="index" method="POST" enctype="multipart/form-data;charset=UTF-8">
           {% csrf_token %}
-          <div class="spacing"><input class="filled" type="text" name="icon" value="icon แล้วแต่"/></div>
-          <div class="spacing"><input class="filled" type="text" name="title" value="title "/></div>
+          <div class="spacing"><input class="filled" type="text" name="icon" value="แล้วแต่"/></div>
+          <div class="spacing"><input class="filled" type="text" name="title" value="ใส่อะไรก็ได้ "/></div>
           <div class="spacing"><input class="filled" type="text" name="detail" value="detail รายละเอียด"/></div>
           <div class="spacing"><button style="padding: 2em;" type="submit">Submit</button></div>
         </form>
